<resources>
    <string name="app_name">ElorMov</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!-- partes -->
    <string name="schedule">Horario</string>
    <string name="teacher_schedules">Horario profesores</string>  
    <string name="students">Alumnos</string>
    <string name="meetings">Reuniones</string>

    <!-- activity_login -->
    <string name="login_title">Portal educativo</string>
    <string name="login_subtitle">Tu espacio digital, disponible en cualquier momento</string>
    <string name="email" translatable="false">Email</string>
    <string name="email_hint" translatable="false">user@elorrieta-errekamari.com</string>
    <string name="password">Contraseña</string>
    <string name="password_hint" translatable="false">••••••••</string>
    <string name="login">Iniciar Sesión</string>

    <!-- activity_profile -->
    <string name="name_example" translatable="false">Dr Roberto García</string>
    <string name="profile_title">Mi Perfil</string>
    <string name="personal_information">INFORMACIÓN PERSONAL</string>
    <string name="user_id" translatable="false">ID</string>
    <string name="address">Dirección</string>
    <string name="contact">CONTACTO</string>
    <string name="phone">Teléfono</string>
    <string name="language_selection">Seleccionar Idioma</string>
    <string name="spanish">Español</string>
    <string name="english">Inglés</string>
    <string name="basque">Euskera</string>
    <string name="logout">Cerrar Sesión</string>

    <!-- activity_camera -->
    <string name="permision_denied">Por favor, acepte los permisos</string>

    <!-- activity_schedule -->
    <string name="monday">Lunes</string>
    <string name="tuesday">Martes</string>
    <string name="wednesday">Miércoles</string>
    <string name="thursday">Jueves</string>
    <string name="friday">Viernes</string>
    <string name="descanso">Descanso</string>
    <string name="first_hour" translatable="false">1</string>
    <string name="second_hour" translatable="false">2</string>
    <string name="third_hour" translatable="false">3</string>
    <string name="fourth_hour" translatable="false">4</string>
    <string name="fifth_hour" translatable="false">5</string>
    <string name="sixth_hour" translatable="false">6</string>
    
    <!-- meeting_bottomsheet -->
    <string name="information">INFORMACIÓN</string>
    <string name="location">LOCALIZACIÓN</string>
    
    <!-- add_meeting_dialog -->
    <string name="title">Titulo:</string>
    <string name="date">Fecha:</string>
    <string name="hour">Hora:</string>
    <string name="center">Centro:</string>
    <string name="classroom">Aula:</string>
    <string name="select_center">Seleccionar centro</string>
    <string name="create">Crear reunion</string>
    <string name="teachers">Profesores</string> 

</resources>