<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_nav_bg"
    android:padding="16dp">

    <ImageView
        android:id="@+id/topBar"
        android:layout_width="200dp"
        android:layout_height="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_round_remove_24"
        android:layout_gravity="center|top" />


    <TextView
        android:id="@+id/meetingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        android:textAlignment="viewStart"
        tools:text="Reunion con Oscar"
        android:padding="8dp"
        android:textColor="?attr/android:textColorPrimary"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:textSize="25sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/meetingTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/btnCancell"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnConfirm"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/cross_ic"
            android:tint="@color/refused"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true">
        </com.google.android.material.imageview.ShapeableImageView>
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/btnConfirm"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toEndOf="@id/btnCancell"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/check_ic"
            android:tint="@color/agreed"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true">
        </com.google.android.material.imageview.ShapeableImageView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/labelInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clConfirmation"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/information"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardPersonal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelInfo"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:strokeWidth="2dp"
        app:strokeColor="?attr/colorPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">
            <TextView
                android:id="@+id/labelDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/date"
                android:textSize="15sp">
            </TextView>
            <TextView
                android:id="@+id/meetingDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="15sp">
            </TextView>
            <TextView
                android:id="@+id/labelHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelDate"
                android:text="@string/hour"
                android:textSize="15sp">
            </TextView>
            <TextView
                android:id="@+id/meetingHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/meetingDate"
                android:textSize="15sp">
            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/labelLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardPersonal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/location"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelLocation"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:strokeWidth="2dp"
        app:strokeColor="?attr/colorPrimary">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">
            <TextView
                android:id="@+id/labelCenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/center"
                android:textSize="15sp">
            </TextView>
            <TextView
                android:id="@+id/center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </TextView>
            <TextView
            android:id="@+id/labelClassroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelCenter"
            android:text="@string/classroom"
            android:textSize="15sp">
            </TextView>
            <TextView
            android:id="@+id/meetingClassroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/center"
            android:textSize="15sp">
            </TextView>

            <org.osmdroid.views.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintTop_toBottomOf="@id/labelClassroom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="10dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>